--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ zookeeper/distributed.systems/target/maven-status/maven-compiler-plugin/compile/
 zookeeper/distributed.systems/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 zookeeper/distributed.systems/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
 zookeeper/distributed.systems/target/maven-archiver/pom.properties
+*.xml
+*.xml
+*.properties
+*.properties
+*.jar
+*.properties
