--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ zookeeper/distributed.systems/target/maven-archiver/pom.properties
 *.properties
 *.jar
 *.properties
+*.properties
+*.properties
+*.properties
