--- a/zookeeper/distributed.systems/pom.xml
+++ b/zookeeper/distributed.systems/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>distributed.systems</groupId>
-    <artifactId>distributed.systems</artifactId>
+    <artifactId>leader.election</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -27,7 +27,6 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.4.2</version>
                 <executions>
